--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.petagram">
 
-    <application
+    <uses-permission android:name="android.permission.INTERNET" />
 
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.Contacto"></activity>
+        <activity android:name=".Activities.Contacto" />
         <activity android:name=".Activities.AcercaDe" />
         <activity android:name=".Activities.CincoFavoritos" />
         <activity android:name=".Activities.MainActivity">
@@ -19,9 +20,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
